server_init/conf/iptables.conf
# Generated by iptables-save v1.4.7 on Tue Jun 13 01:18:23 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [14:2016]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -s 10.0.0.0/8 -j ACCEPT 
-A INPUT -s 172.16.0.0/12 -j ACCEPT 
-A INPUT -s 192.168.0.0/16 -j ACCEPT 
-A INPUT -s 221.174.16.0/28 -j ACCEPT 
-A INPUT -s 110.96.34.208/28 -j ACCEPT 
-A INPUT -s 111.204.6.221/32 -j ACCEPT 
-A INPUT -s 111.13.137.184/32 -j ACCEPT 
-A INPUT -s 110.96.194.0/30 -j ACCEPT 
-A INPUT -s 61.233.17.4/30 -j ACCEPT 
-A INPUT -s 218.240.128.48/30 -j ACCEPT 
-A INPUT -s 120.27.4.138/30 -j ACCEPT 
-A INPUT -j DROP
COMMIT
# Completed on Tue Jun 13 01:18:23 2017
# Generated by iptables-save v1.4.7 on Tue Jun 13 01:18:23 2017
